syntax = "proto3";
package sentinel.lease.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sentinel-official/hub/v12/x/lease/types/v1";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message Lease {
  uint64 id = 1 [(gogoproto.customname) = "ID"];
  string prov_address = 2;
  string node_address = 3;
  cosmos.base.v1beta1.Coin price = 4 [(gogoproto.nullable) = false];
  int64 hours = 5;
  int64 max_hours = 6;
  bool renewable = 7;
  google.protobuf.Timestamp inactive_at = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp payout_at = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}
